# hledac-universal

./: .cursorrules  .env.example  .gitignore  .opencode.json  .prototools  .qoderignore  ACADEMIC_INTELLIGENCE_REPORT.md  ACADEMIC_SOURCES_COMPLETE.md  AGENTS.md  ARCHITECTURE_MAP.py  AUDIT_REPORT.md  CAPTCHA_DETECTOR_P3.md  CASCADE_CLASSIFICATION.md  CLAUDE.md  CODE_REVIEW_TODO_PRACTICES_ASYNC.md  COREML_ACTIVATION_REPORT.md  COREML_ANE_INTEGRATION_PLAN.md  DARK_WEB_IMAGE_WIRING_P1.md  DEEP_REVIEW_2026-04-29.md  DHT_AUDIT_AND_FIX.md  DSPY_INTEGRATION_PLAN.md  E2E_SIDECAR_VALIDATION.md  EMBEDDING_OWNERSHIP_PLAN.md  ENHANCED_RESEARCH_ACTIVATION.md  EXPANSION_OPPORTUNITIES.md  FILESYSTEM_CENSUS_20260523.md  FIXES_APPLIED.md  FOCA_INTEGRATION_STATUS.md  FUSION_INTEGRATION_P2.md  GAP_ANALYSIS_PLAN_20260524.md  GAP_FIX_REPORT.md  GHOST_INVARIANTS.md  GHOST_STEGO_CANONICALIZATION.md  GRAPH_WIRING_COMPLETE.md  IMPORT_FIX_LOG.md  IMPORT_FIX_REPORT.md  IMPORT_HEALTH_DASHBOARD.md  IMPORT_HEALTH_REPORT.json  LAYERS_INTEGRATION_PLAN.md  LLM_CANDIDATE_REGISTRY_PLAN.md  (+134 more)
.claudekit/: config.json
.full-review-2026-04-23/: 00-scope.md  01-quality-architecture.md  01A-quality-findings.md  01B-architecture-findings.md  02-security-performance.md  02A-security-findings.md  02B-performance-findings.md  03-testing-documentation.md  03A-testing-findings.md  03B-documentation-findings.md  04B-devops-findings.md  05-final-report.md  state.json
.gemini/: settings.json
.omc/: .project-memory.json.tmp.32fb3fa1-fd4d-496c-8469-cba34903acdb  .project-memory.json.tmp.3722358f-c64e-4ca2-a709-82842ef90f46  .project-memory.json.tmp.57b11791-171c-440a-88f3-b1921c618731  .project-memory.json.tmp.72977840-f934-4348-9dc3-306958de3aa7
.qoder/: mcp.json  settings.json
.srclight_bak/: index.db
.temporal_store/: temporal_signal.db  temporal_signal.db-shm
_shims/: core_http.py  core_mlx_embeddings.py  core_resilience.py  core_unified_ai_orchestrator.py  core_watchdog.py  cortex_director.py  security_quantum_resistant_crypto.py  security_stealth_engine.py  security_temporal_anonymizer.py  security_threat_intelligence.py  security_zero_attribution_engine.py  security_zkp_research_engine.py
archive/: ARCHITECTURE_MAP.py
benchmark_results/: benchmark_20260505_142554.json  benchmark_20260505_142554.txt  benchmark_20260520_045155.json  benchmark_20260520_045155.txt
benchmarks/: benchmark_pipeline.py  benchmark_sprint_probe.py  coreml_ane_capability.py  dedup_determinism_benchmark.py  e2e_canonical_benchmark.py  e2e_compare.py  e2e_curl_cffi_protected_fixture.py  e2e_signal_fixture.py  e2e_signal_fixture_compare.py  e2e_sprint_probe.py  live_measurement_kpi.py  live_measurement_markdown.py  live_measurement_next_action.py  live_measurement_parser.py  live_measurement_quality.py  live_measurement_schema.py  live_measurement_terminality.py  live_sprint_measurement.py  llm_reasoner_benchmark.py  m1_embedding_batch_benchmark.py  m1_embedding_streaming.py  m1_mlx_stream_uma_probe.py  m1_phase4_budget.py  m1_sustained_sprint.py  ranking_dedup_hotspot_benchmark.py  research_effectiveness.py  run_sprint82j_benchmark.py  static_hydration_impact.py  vision_vlm_routing_benchmark.py
brain/: __init__.py  _lazy.py  adaptive_context_policy.py  ane_embedder.py  apple_fm_probe.py  batch_scheduler.py  confidence_utils.py  coreml_embedder.py  decision_engine.py  distillation_engine.py  dspy_optimizer.py  dspy_programs.py  dspy_service.py  dspy_signatures.py  evidence_fusion.py  gnn_predictor.py  hermes3_engine.py  hypothesis_engine.py  inference_engine.py  insight_engine.py  llm_candidate_registry.py  model_engine.py  model_inference_guard.py  model_lifecycle.py  model_manager.py  model_phase_facts.py  model_swap_manager.py  modernbert_adapter.py  modernbert_engine.py  moe_router.py  ner_engine.py  paged_attention_cache.py  prompt_bandit.py  prompt_cache.py  prompt_injection_validator.py  quantization_selector.py  research_flow_decider.py  synthesis_runner.py
cache/: budget_manager.py
context_optimization/: __init__.py  active_learning.py  context_cache.py  context_compressor.py  dynamic_context_manager.py  mmr.py
coordinators/: __init__.py  _catalog.py  agent_coordination_engine.py  archive_coordinator.py  base.py  benchmark_coordinator.py  claims_coordinator.py  coordinator_registry.py  enums.py  execution_coordinator.py  fetch_coordinator.py  graph_coordinator.py  memory_coordinator.py  meta_reasoning_coordinator.py  mixins.py  monitoring_coordinator.py  multimodal_coordinator.py  performance_coordinator.py  privacy_enhanced_research.py  render_coordinator.py  research_coordinator.py  research_optimizer.py  resource_allocator.py  security_coordinator.py  swarm_coordinator.py  validation_coordinator.py
core/: __init__.py  __main__.py  mlx_embeddings.py  resource_governor.py
deep_research/: __init__.py  path_discovery.py  probe_runner.py  utils.py
dht/: kademlia_node.py  local_graph.py  metadata_fetcher.py  sketch_exchange.py
discovery/: cascade.py  circl_pdns_adapter.py  crtsh_adapter.py  dht_adapter.py  discovery_planner.py  duckduckgo_adapter.py  fediverse_adapter.py  fusion_ranker.py  gopher_crawler.py  historical_frontier.py  matrix_adapter.py  provider_stats.py  rss_atom_adapter.py  source_registry.py  ti_aspirational.py  ti_feed_adapter.py  wayback_cdx_adapter.py
docs/: ARCHITECTURE.md  CODEX_AUDIT_REPORT.md  DEPENDENCY_HYGIENE.md  DEPENDENCY_PROFILES.md  LOCAL_OSINT_CAPABILITY_MATRIX.md  TESTING.md  arch-2026-05-26.md  type_audit.md
embedding_cache/: lock.mdb
embeddings/: modernbert_embedder.py
execution/: __init__.py  ghost_executor.py
export/: COMPAT_HANDOFF.py  __init__.py  export_manager.py  formatters.py  hypothesis_builder.py  jsonld_exporter.py  markdown_reporter.py  sprint_exporter.py  sprint_markdown_reporter.py  stix_exporter.py
rust_extensions/: BUILD.md  Cargo.toml  README.md  RUST_BUILD_LOG.md  RUST_EXTENSIONS_BUILD.md  build.rs  pyproject.toml
rust_extensions/.cargo/: config.toml
rust_extensions/src/: aho_corasick.rs  bloom.rs  ioc_extract.rs  lib.rs  rolling_hash.rs
(+1782 files in other folders)
