[package]
name = "hledac-rust-extensions"
version = "0.1.0"
edition = "2021"

[lib]
name = "hledac_rust_extensions"
crate-type = ["cdylib", "rlib"]

[dependencies]
aho-corasick = "1.1"
bloomfilter = "3.0"
pyo3 = { version = "0.28", features = ["extension-module"] }
thiserror = "2"
regex = "1"
url = "2"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.armv7-unknown-linux-gnueabihf]
rustflags = ["-C", "target-cpu=generic+neon"]

[build]
rustflags = ["-C", "target-feature=+neon"]