[package]
name = "hledac-rust-extensions"
version = "0.1.0"
edition = "2021"

[lib]
name = "hledac_rust_extensions"
crate-type = ["cdylib", "rlib"]

[dependencies]
aho-corasick = "1.1"
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1"
url = "2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
once_cell = "1.19"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.armv7-unknown-linux-gnueabihf]
rustflags = ["-C", "target-cpu=generic+neon"]

[build]
rustflags = ["-C", "target-feature=+neon"]
